application/expense-report/expense.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense
spec:
  selector:
    app: expense
  ports:
    - port: 9091
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense
  labels:
    app: expense
    tags.datadoghq.com/service: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense
  template:
    metadata:
      labels:
        app: expense
        tags.datadoghq.com/service: expense
      annotations:
        admission.datadoghq.com/enabled: "true"
        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
        ad.datadoghq.com/envoy-sidecar.checks: |
          {
            "envoy": {
              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
            }
          }
        consul.hashicorp.com/connect-inject: 'true'
        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "8125,8126"
    spec:
      serviceAccountName: expense
      containers:
        - name: expense
          image: joatmon08/fake-service:v0.25.0
          ports:
            - containerPort: 9091
