application/expense-report/report.yaml
apiVersion: v1
kind: Service
metadata:
  name: report
spec:
  selector:
    app: report
  ports:
    - port: 9091
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report
  labels:
    app: report
    tags.datadoghq.com/service: report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report
  template:
    metadata:
      labels:
        app: report
        tags.datadoghq.com/service: report
      annotations:
        admission.datadoghq.com/enabled: "true"
        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
        ad.datadoghq.com/envoy-sidecar.checks: |
          {
            "envoy": {
              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
            }
          }
        consul.hashicorp.com/connect-inject: 'true'
        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "8125,8126"
    spec:
      serviceAccountName: report
      containers:
        - name: report
          image: joatmon08/fake-service:v0.25.0
          ports:
            - containerPort: 9091
