application/expense-report/route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: expense
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /report
    backendRefs:
    - kind: Service
      name: report
      namespace: default
      port: 9092
